methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:21: error: not found: value estsurBiscuit
   if (estsurBiscuit()){
       ^